2008-04-28  Bastian Maerkisch  <bmaerkisch@web.de>

	* term/win.trm: Remove specific references to Windows 3.1

2008-04-27  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (boundary): The windows and postscript terminals place
	the xlabel text with the character baseline on the bottom edge of the
	canvas.  This causes any descenders to be clipped.  This patch leaves an
	extra 1/5 line height of empty space at the bottom.  This fixes windows
	and postscript, but introduces a small waste of space on most other
	terminal types.
	Bug #1918293

2008-04-26  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgraph.c term/win.trm (WIN_set_color):  Preserve setting of
	dash type and linewidth when a new color is selected.
	Allow dash types with linewidth > 1.
	Bug #1863361

2008-04-25  Ethan A Merritt  <merritt@u.washington.edu>

	* term/post.trm (PS_options):  "set term post ..." was losing options on
	the command line that appeared after "fontfile 'foo' ".
	Remove extraneous an c_token++.

	* src/graphics.c (plot_points) src/plot2d.c (get_data):  Allow the
	points in "with linespoints" to accept all the extra properties that
	"with points" already allows.  "pointsize variable" reads data from
	a 3rd column, "lc rgb variable" reads from a 3rd or 4th column.

	* docs/gnuplot.doc:  Wording changes suggested on newsgroup.

2008-04-24  Ethan A Merritt  <merritt@u.washington.edu>

	* term/post.trm (PS_encode_image PS_image):  If the palette size is
	limited by "set palette maxcolors" then we need to rescale [0:maxcolors]
	to [0:bitwidth] for the packed representation of the image in PostScript
	Bug #1869824

2008-04-24  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgnuplib.h src/win/wgraph.c:  Separate the status line from
	the plot canvas. XOR drawing is replaced by full overwrites.
	Status line no longer contains garbled text.
	Bug #1520692

	* config/config.nt: Disable many thousand compiler warnings from 
	Microsoft Visual Express C++ 2005.
